# NQueensFAF-cuda

./: CMakeLists.txt  NQueensFAF.sln  NQueensFAF.vcxproj  NQueensFAF.vcxproj.filters  build.bat  htodtypes.cuh  kernel.cu  main.cpp  solver.cpp  solver.cu  solver.cuh  solver.hpp
apps/: main.cpp
include/nqueensfaf/: solver.hpp
src/: solver.cpp
